--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class ="row justify-content-between">
         <div class="col-auto">
             <div class="row">
-                <div class="col-auto"> <img src="./unique.svg" alt="logo"></div>
+                <div class="col-auto"> <img src="./logo.svg" alt="logo"></div>
                 <div class="col-auto"> <ul class="nav">
-                    <li class="nav-item"><a class="nav-link" href="#">Nápojee</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Nápoje</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Automaty</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Unique concept</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">O nás</a></li>
